--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css" />
 
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <!-- Embed fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,14 +20,14 @@
       rel="stylesheet"
     />
 
-    <!-- Icon -->
-    <link rel="short icon" href="" />
-
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+
+    <!-- Icon -->
+    <link rel="short icon" href="" />
   </head>
   <body>
     <main>
@@ -33,7 +36,7 @@
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
-            <img src="./assets/img/Logo.svg" alt="Besnik" width="200px" />
+            <img src="./assets/img/Logo.svg" alt="Besnik" />
 
             <!-- Navigation -->
             <ul class="navbar__list">
@@ -521,8 +524,9 @@
             <p class="copyright">Copyright 2020.com, All rights reserved.</p>
           </div>
         </div>
+        <a id="gototop" href="#!"><i class="fas fa-angle-up"></i></a>
       </footer>
-
     </main>
+    <script src="./js/main.js"></script>
   </body>
 </html>
