--- a/index.html
+++ b/index.html
@@ -409,15 +409,17 @@
 
           <div class="row row-qty">
             <div class="qty-item">
-              <strong class="qty">2,500</strong>
+              <strong class="qty" id="sale">0</strong>
               <p class="qty-desc">Homes For Sale</p>
             </div>
             <div class="qty-item">
-              <strong class="qty">5,000+</strong>
+              <strong class="qty" id="sold">0</strong>
+              <span class="qty">+</span>
               <p class="qty-desc">Homes Recently Sold</p>
             </div>
             <div class="qty-item">
-              <strong class="qty">170+</strong>
+              <strong class="qty" id="reduced">0</strong>
+              <span class="qty">+</span>
               <p class="qty-desc">Price Reduced</p>
             </div>
           </div>
