--- a/index.html
+++ b/index.html
@@ -97,11 +97,21 @@
           </div>
 
           <div class="images">
-            <img src="./assets/img/unides.svg" alt="client_1" />
-            <img src="./assets/img/slack.svg" alt="client_2" />
-            <img src="./assets/img/amazon.svg" alt="client_3" />
-            <img src="./assets/img/commerce.svg" alt="client_4" />
-            <img src="./assets/img/sitepoint.svg" alt="client_5" />
+            <a href="#!">
+              <img src="./assets/img/unides.svg" alt="client_1" />
+            </a>
+            <a href="#!">
+              <img src="./assets/img/slack.svg" alt="client_2" />
+            </a>
+            <a href="#!">
+              <img src="./assets/img/amazon.svg" alt="client_3" />
+            </a>
+            <a href="#!">
+              <img src="./assets/img/commerce.svg" alt="client_4" />
+            </a>
+            <a href="#!">
+              <img src="./assets/img/sitepoint.svg" alt="client_5" />
+            </a>
           </div>
         </div>
       </div>
