--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
   </head>
   <body>
     <main>
-      <!-- Header -->
-      <header class="header">
+      <header class="fixed-header">
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
@@ -53,7 +52,12 @@
               <a href="#!" class="btn action-btn">Sign up</a>
             </div>
           </nav>
+        </div>
+      </header>
 
+      <!-- Hero -->
+      <div class="hero-wrap">
+        <div class="content">
           <div class="hero">
             <div class="info">
               <p class="sub-title">Welcome to Besnik Agency</p>
@@ -72,7 +76,7 @@
             />
           </div>
         </div>
-      </header>
+      </div>
 
       <!-- Clients -->
       <div class="clients">
