--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
   </head>
   <body>
     <main>
+      <!-- Header -->
       <header class="fixed-header">
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
-            <img src="./assets/img/Logo.svg" alt="Besnik" />
+            <a href="#!">
+              <img src="./assets/img/Logo.svg" alt="Besnik" />
+            </a>
 
             <!-- Navigation -->
             <ul class="navbar__list">
